--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 html {
     scroll-behavior: smooth;
+    scroll-padding-top: 100px;
 }
 body {
+    background-color: black;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -12,12 +14,21 @@ header {
     align-items: center;
     background-color: #8d0000;
     color: white;
-    padding: 10px 20px;
+    padding:10px 10px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    margin-bottom: 5%;
+}
+main {
+    padding-top: 100px; 
 }
 nav ul {
     list-style-type: none;
     padding: 0;
     display: flex;
+    margin-right: 20px;
 }
 nav ul li {
     margin: 0 15px;
@@ -31,6 +42,8 @@ aside {
     padding: 20px;
     background-color: #f4f4f4;
     margin-right: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
 }
 article {
     flex: 3;
@@ -58,4 +71,49 @@ a{
 }
 a:hover{
     color: yellow;
+}
+
+@media screen and (max-width: 768px) {
+    body {
+        padding: 0;
+        margin: 0;
+    }
+    header {
+        flex-direction: column;
+        text-align: center;
+    }
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
+    nav ul li {
+        margin: 10px 0;
+    }
+    .container {
+        flex-direction: column;
+        margin: 10px;
+    }
+    aside {
+        margin-right: 0;
+        margin-bottom: 20px;
+        font-size: 11px;
+    }
+    footer {
+        padding: 15px 0;
+        font-size: 10px;
+    }
+
+    main{
+        padding-top: 220px;
+    }
+
+    html {
+        scroll-behavior: smooth;
+        scroll-padding-top: 220px;
+    }
+    article{
+        font-size: 12px;
+    }
 }
